Modifs
La boucle est sensée fonctionner maintenant, juste encore quelques soucis de logique