@@ -8,7 +8,7 @@ public class Chancelier extends Card {
     public void appliquerEffet(Player joueurActif) {
         // L'effet du Chancelier est de piocher 2 cartes et d'en remettre 2 sous la pioche.
         System.out.println("Le Chancelier a été joué.");
-        if(CoreGame.pioche.size() < 1)
+        if(CoreGame.pioche.isEmpty())
         {
             System.out.println("La pioche est vide l'effet est annulé.");
             return;
@@ -16,9 +16,9 @@ public class Chancelier extends Card {
         if(CoreGame.pioche.size() < 2)
         {
             System.out.println("Il n'y a qu'une seule carte dans la pioche, vous ne pouvez en piocher qu'une seule.");
-            Card carte1 = CoreGame.pioche.get(CoreGame.pioche.size() - 1); //On récupére les cartes
+            Card carte1 = CoreGame.pioche.getLast(); //On récupére les cartes
             carte1.mettreDansMain(joueurActif); //On modifie leur statut et on les met dans la main du joueur
-            CoreGame.pioche.remove(CoreGame.pioche.size() - 1); //On oublie pas de supprimer celles de la pioche pour éviter les doublons
+            CoreGame.pioche.removeLast(); //On oublie pas de supprimer celle de la pioche pour éviter les doublons
         }
         else
         {
@@ -36,7 +36,6 @@ public class Chancelier extends Card {
     }
 
     public Chancelier() {
-        super("Chancelier", 6); // Le Chancelier a une valeur de 6
-    }
+        super("Chancelier", 6);} // Le Chancelier a une valeur de 6
 
 }
