@@ -11,20 +11,16 @@ public class Prince extends Card {
         // L'effet du Prince est de faire défausser une carte à un joueur ciblé.
         System.out.println("Le Prince a été joué. Un joueur ciblé défausse sa main.");
 
-        Player choix = CoreGame.demanderCible(joueurActif);
-        choix.hand.get(0).defausser(joueurActif);
-        if(CoreGame.pioche.size() > 0)
+        Player choix = CoreGame.demanderCible(joueurActif, this);
+        choix.hand.getFirst().defausser(joueurActif); //Car le joueur n'a qu'une seule carte de toute façon
+        if(!CoreGame.pioche.isEmpty())
         {
-            choix.hand.add(CoreGame.pioche.get(CoreGame.pioche.size() - 1));
-            CoreGame.pioche.remove(CoreGame.pioche.size() - 1);
-            return;
+            choix.hand.add(CoreGame.pioche.getLast());
+            CoreGame.pioche.removeLast();
         }
         else
         {
             System.out.println("La pioche est vide.");
-            choix.hand.add(CoreGame.carteCachee);
-            CoreGame.carteCachee = null;
-            return;
         }
     }
 
